--- a/quizStyle.css
+++ b/quizStyle.css
@@ -2,11 +2,50 @@
 body{
     display: flex;
     flex-direction: row;
-    padding: 10px;
+    margin:auto;
+    padding:auto;
+    flex-direction: column;
+    width: 80vw;
+    height: 90vh;
 }
-.button{
+
+
+.answer{
     background-color: greenyellow;
     width: 10vw;
     height: 20vh;
-    padding: 10px;
+    border: 5px dashed grey;
+    color:darkblue;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    margin-left: 10px;
+    margin-right: 10px;
+    transition: 1s;
+    flex: 0.5;
+}
+
+.answer:hover{
+    scale: 110%;
+    background-color: greenyellow;
+    width: 11vw;
+    height: 20vh;
+    border: 5px dashed grey;
+    color:darkblue;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    margin-left: 10px;
+    margin-right: 10px;
+    transition: 1s;
+    flex:0.5;
+    
+}
+
+.questionContainer{
+    flex:0.5;
+    background-color: aqua;
+}
+
+.answerContainer{
+    flex:0.5;
+    background-color: limegreen;
 }
