--- a/quizStyle.css
+++ b/quizStyle.css
@@ -7,45 +7,43 @@ body{
     flex-direction: column;
     width: 80vw;
     height: 90vh;
+    background-color: beige;
 }
 
 
 .answer{
     background-color: greenyellow;
-    width: 10vw;
-    height: 20vh;
+    width: 15vw;
+    height: 10vh;
     border: 5px dashed grey;
     color:darkblue;
-    margin-top: 10px;
-    margin-bottom: 10px;
-    margin-left: 10px;
-    margin-right: 10px;
     transition: 1s;
-    flex: 0.5;
+    
 }
 
 .answer:hover{
     scale: 110%;
-    background-color: greenyellow;
-    width: 11vw;
-    height: 20vh;
-    border: 5px dashed grey;
+    background-color: lightcoral;
+    border: 5px dashed black;
     color:darkblue;
-    margin-top: 10px;
-    margin-bottom: 10px;
-    margin-left: 10px;
-    margin-right: 10px;
     transition: 1s;
-    flex:0.5;
+    
     
 }
 
 .questionContainer{
+    display:flex;
     flex:0.5;
     background-color: aqua;
+    text-align: center;
 }
 
 .answerContainer{
-    flex:0.5;
+    height:80vh;
+    width: 80vw;
+    flex:1;
     background-color: limegreen;
+    display:flex;
+    justify-content: space-evenly;
+    align-items: center;
 }
